--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "homepage": "http://naisthorpe.github.io/react-portfolio",
   "version": "0.1.0",
   "private": true,
+  "root": "build/",
+  "routes": {
+    "/**": "index.html"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
